--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,18 +1,16 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 86
-  date: 2014-02-22 23:00
-  author:
-    name: haya14busa
-    url: https://github.com/haya14busa
-  vimrcs:
-    - name: vimrc
-      url: https://github.com/haya14busa/dotfiles/blob/master/.vimrc
-      hash: be8937e097af4666a4057090b79792acc137fca1
-  part: 後編
-  other:
 - id: 87
   date: 2014-03-01 23:00
+  author:
+    name: toupeira
+    url: https://github.com/toupeira
+  vimrcs:
+    - name: vimrc
+      url: https://github.com/toupeira/dotfiles/blob/master/vim/vimrc
+  other:
+- id: 88
+  date: 2014-03-08 23:00
   author:
     name:
     url:
