--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 88
-  date: 2014-03-08 23:00
+- id: 89
+  date: 2014-03-15 23:00
   author:
-    name: januswel
-    url: https://github.com/januswel
+    name: dsummersl
+    url: https://github.com/dsummersl
   vimrcs:
     - name: vimrc
-      url: https://github.com/januswel/dotfiles/blob/master/.vimrc
+      url: https://github.com/dsummersl/dotvim/blob/master/_vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
