--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 89
-  date: 2014-03-15 23:00
+- id: 90
+  date: 2014-03-22 23:00
   author:
-    name: dsummersl
-    url: https://github.com/dsummersl
+    name: Layzie
+    url: https://github.com/Layzie
   vimrcs:
     - name: vimrc
-      url: https://github.com/dsummersl/dotvim/blob/master/_vimrc
+      url: https://github.com/Layzie/dotfiles/blob/master/.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
