--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 90
-  date: 2014-03-22 23:00
+- id: 91
+  date: 2014-03-29 23:00
   author:
-    name: Layzie
-    url: https://github.com/Layzie
+    name: faceleg
+    url: https://github.com/faceleg
   vimrcs:
     - name: vimrc
-      url: https://github.com/Layzie/dotfiles/blob/master/.vimrc
+      url: https://github.com/faceleg/dotfiles/blob/master/configuration/vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
