--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 92
-  date: 2014-04-05 23:00
+- id: 93
+  date: 2014-04-12 23:00
   author:
-    name: reedes
-    url: https://github.com/reedes
+    name: glts
+    url: https://github.com/glts
   vimrcs:
     - name: vimrc
-      url: https://github.com/reedes/vim-config/blob/master/vimrc
+      url: https://github.com/glts/dotfiles/blob/master/.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
