Fix id 72: missing vimrc info

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -1894,6 +1894,8 @@
     name: 田中邦裕
     url: http://tanaka.sakura.ad.jp/vimrc
   vimrcs:
+  - name: vimrc
+    url: http://tanaka.sakura.ad.jp/vimrc
   part: 
   other: 
   members:
