Fix id 35: members missing

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -969,6 +969,19 @@
   part: 
   other: 
   members:
+    -  Lindan
+    -  basyura
+    -  boolfool
+    -  bouzuya
+    -  cohama
+    -  hecomi
+    -  jakalada
+    -  manga_osyo
+    -  mattn
+    -  rbtnn
+    -  thinca
+    -  ujihisa
+    -  wiredool
   log: http://lingr.com/room/vim/archives/2013/03/02#message-14179525
   links:
 - id: 36
