--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 94
-  date: 2014-04-19 23:00
+- id: 95
+  date: 2014-04-26 23:00
   author:
-    name: gcmt
-    url: https://github.com/gcmt
+    name: furu
+    url: https://github.com/furu
   vimrcs:
     - name: vimrc
-      url: https://github.com/gcmt/dotfiles/blob/master/vim/.vimrc
+      url: https://github.com/furu/dotfiles/blob/master/vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
