--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 95
-  date: 2014-04-26 23:00
+- id: 96
+  date: 2014-05-03 23:00
   author:
-    name: furu
-    url: https://github.com/furu
+    name: lesguillemets
+    url: https://github.com/lesguillemets
   vimrcs:
     - name: vimrc
-      url: https://github.com/furu/dotfiles/blob/master/vimrc
+      url: https://github.com/lesguillemets/myvim/blob/master/.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
