--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -2568,3 +2568,31 @@
   - ujihisa
   log: http://lingr.com/room/vim/archives/2014/05/24#message-19120039
   links: 
+- id: 100
+  date: 2014-05-31 23:00
+  author:
+    name: lambdalisue
+    url: https://github.com/lambdalisue
+  vimrcs:
+  - name: vimrc
+    url: https://github.com/lambdalisue/vim-castle/blob/7545bcea880a28f85947ee47e4b2e9cfc281f804/home/.vim/vimrc
+  part: 
+  other: 
+  members:
+  - aomoriringo
+  - cohama
+  - crazymaster
+  - deris0126
+  - haya14busa
+  - hujo
+  - lambdalisue
+  - lisia
+  - manga_osyo
+  - pocke
+  - rbtnn
+  - s_of_p
+  - thinca
+  - ujihisa
+  log: http://lingr.com/room/vim/archives#message-19190832
+  links:
+  - http://chopapp.com/#unhrv006
