--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 100
-  date: 2014-05-31 23:00
+- id: 101
+  date: 2014-06-07 23:00
   author:
-    name: lambdalisue
-    url: https://github.com/lambdalisue
+    name: violetyk
+    url: https://github.com/violetyk
   vimrcs:
     - name: vimrc
-      url: https://github.com/lambdalisue/vim-castle/blob/master/home/.vim/vimrc
+      url: https://github.com/violetyk/dotfiles/blob/master/.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
