--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 101
+- id: 102
   date: 2014-06-07 23:00
   author:
-    name: violetyk
-    url: https://github.com/violetyk
+    name: eagletmt
+    url: https://github.com/eagletmt
   vimrcs:
     - name: vimrc
-      url: https://github.com/violetyk/dotfiles/blob/master/.vimrc
+      url: https://github.com/eagletmt/dotfiles/blob/master/dot.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
