--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
-- id: 103
-  date: 2014-06-21 23:00
+- id: 104
+  date: 2014-06-28 23:00
   author:
-    name: tarruda
-    url: https://github.com/tarruda
+    name: monochromegane
+    url: https://github.com/monochromegane/
   vimrcs:
     - name: vimrc
-      url: https://github.com/tarruda/dot-files/blob/master/vim/vimrc
+      url: https://github.com/monochromegane/dotfiles/blob/master/vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
