--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,13 @@
 # vim: expandtab softtabstop=2 shiftwidth=2
 # _data/next.yml
 - id: 104
-  date: 2014-06-28 23:00
+  date: 2014-07-05 23:00
   author:
-    name: monochromegane
-    url: https://github.com/monochromegane/
+    name: shiwano
+    url: https://github.com/shiwano
   vimrcs:
     - name: vimrc
-      url: https://github.com/monochromegane/dotfiles/blob/master/vimrc
+      url: https://github.com/shiwano/dotfiles/blob/master/dot.vimrc
       hash: #省略可
   part: #省略可
   other: #省略可
