--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,13 +1,12 @@
-# vim: expandtab softtabstop=2 shiftwidth=2
-# _data/next.yml
+---
 - id: 105
   date: 2014-07-05 23:00
   author:
     name: shiwano
     url: https://github.com/shiwano
   vimrcs:
-    - name: vimrc
-      url: https://github.com/shiwano/dotfiles/blob/master/dot.vimrc
-      hash: #省略可
-  part: #省略可
-  other: #省略可
+  - url: https://github.com/shiwano/dotfiles/blob/master/dot.vimrc
+    name: dot.vimrc
+    hash: 
+  part: 
+  other: 
