Fix the log urls after 100 miss the date in their url
Thanks, @pocke

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -2593,7 +2593,7 @@
   - s_of_p
   - thinca
   - ujihisa
-  log: http://lingr.com/room/vim/archives#message-19190832
+  log: http://lingr.com/room/vim/archives/2014/05/31#message-19190832
   links:
   - http://chopapp.com/#unhrv006
 - id: 101
@@ -2625,7 +2625,7 @@
   - supermomonga
   - thinca
   - ujihisa
-  log: http://lingr.com/room/vim/archives#message-19254255
+  log: http://lingr.com/room/vim/archives/2014/06/07#message-19254255
   links: 
 - id: 102
   date: 2014-06-14 23:00
@@ -2649,7 +2649,7 @@
   - rinx
   - s_of_p
   - thinca
-  log: http://lingr.com/room/vim/archives#message-19314896
+  log: http://lingr.com/room/vim/archives/2014/06/14#message-19314896
   links: 
 - id: 103
   date: 2014-06-21 23:00
@@ -2670,7 +2670,7 @@
   - sgur
   - supermomonga
   - thinca
-  log: http://lingr.com/room/vim/archives#message-19379490
+  log: http://lingr.com/room/vim/archives/2014/06/21#message-19379490
   links: 
 - id: 104
   date: 2014-06-28 23:00
@@ -2693,5 +2693,5 @@
   - raa0121
   - sgur
   - thinca
-  log: http://lingr.com/room/vim/archives#message-19451008
+  log: http://lingr.com/room/vim/archives/2014/06/28#message-19451008
   links: 
