--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 105
-  date: 2014-07-05 23:00
+- id: 106
+  date: 2014-07-12 23:00
   author:
-    name: shiwano
-    url: https://github.com/shiwano
+    name: miio
+    url: https://github.com/miio
   vimrcs:
-  - url: https://github.com/shiwano/dotfiles/blob/master/dot.vimrc
-    name: dot.vimrc
+  - url: https://github.com/miio/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
