--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 106
-  date: 2014-07-12 23:00
+- id: 107
+  date: 2014-07-19 23:00
   author:
-    name: miio
-    url: https://github.com/miio
+    name: itochan
+    url: https://github.com/itochan
   vimrcs:
-  - url: https://github.com/miio/dotfiles/blob/master/.vimrc
+  - url: https://github.com/itochan/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
