--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 107
-  date: 2014-07-19 23:00
+- id: 108
+  date: 2014-07-26 23:00
   author:
-    name: itochan
-    url: https://github.com/itochan
+    name: scheakur
+    url: https://github.com/scheakur
   vimrcs:
-  - url: https://github.com/itochan/dotfiles/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/scheakur/dotfiles/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
