--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 108
-  date: 2014-07-26 23:00
+- id: 109
+  date: 2014-08-02 23:00
   author:
-    name: scheakur
-    url: https://github.com/scheakur
+    name: dalibor
+    url: https://github.com/dalibor
   vimrcs:
-  - url: https://github.com/scheakur/dotfiles/blob/master/vimrc
+  - url: https://github.com/dalibor/vimfiles/blob/master/vimrc
     name: vimrc
     hash: 
   part: 
