--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 109
-  date: 2014-08-02 23:00
+- id: 110
+  date: 2014-08-09 23:00
   author:
-    name: dalibor
-    url: https://github.com/dalibor
+    name: divad12
+    url: https://github.com/divad12
   vimrcs:
-  - url: https://github.com/dalibor/vimfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/divad12/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
