--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 111
-  date: 2014-08-16 23:00
+- id: 112
+  date: 2014-08-23 23:00
   author:
-    name: chibicode
-    url: https://github.com/chibicode
+    name: koara-local
+    url: https://github.com/koara-local
   vimrcs:
-  - url: https://github.com/chibicode/vimrc/blob/master/vimrc.vim
-    name: vimrc.vim
+  - url: https://github.com/koara-local/dotvim/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
