--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 112
-  date: 2014-08-23 23:00
+- id: 113
+  date: 2014-08-30 23:00
   author:
-    name: koara-local
-    url: https://github.com/koara-local
+    name: yuroyoro
+    url: https://github.com/yuroyoro
   vimrcs:
-  - url: https://github.com/koara-local/dotvim/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/yuroyoro/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
