--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 114
-  date: 2014-09-06 23:00
+- id: 115
+  date: 2014-09-13 23:00
   author:
-    name: junegunn
-    url: https://github.com/junegunn
+    name: aktau
+    url: https://github.com/aktau
   vimrcs:
-  - url: https://github.com/junegunn/dotfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/aktau/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
