--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 118
-  date: 2014-10-04 23:00
+- id: 119
+  date: 2014-10-11 23:00
   author:
-    name: yasu-n
-    url: https://github.com/yasu-n
+    name: luke-gru
+    url: https://github.com/luke-gru
   vimrcs:
-  - url: https://github.com/yasu-n/dotfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/luke-gru/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
