--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 119
-  date: 2014-10-11 23:00
+- id: 120
+  date: 2014-10-18 23:00
   author:
-    name: luke-gru
-    url: https://github.com/luke-gru
+    name: srockstyle
+    url: https://github.com/srockstyle
   vimrcs:
-  - url: https://github.com/luke-gru/dotfiles/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/srockstyle/vimrc/blob/master/dot_vimrc
+    name: dot_vimrc
     hash: 
   part: 
   other: 
