--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 120
-  date: 2014-10-18 23:00
+- id: 121
+  date: 2014-10-25 23:00
   author:
-    name: srockstyle
-    url: https://github.com/srockstyle
+    name: timss
+    url: https://github.com/timss
   vimrcs:
-  - url: https://github.com/srockstyle/vimrc/blob/master/dot_vimrc
-    name: dot_vimrc
+  - url: https://github.com/timss/vimconf/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
