--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 121
-  date: 2014-10-25 23:00
+- id: 122
+  date: 2014-11-01 23:00
   author:
-    name: timss
-    url: https://github.com/timss
+    name: frah
+    url: https://github.com/frah
   vimrcs:
-  - url: https://github.com/timss/vimconf/blob/master/.vimrc
+  - url: https://github.com/frah/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
