--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 122
-  date: 2014-11-01 23:00
+- id: 123
+  date: 2014-11-08 23:00
   author:
-    name: frah
-    url: https://github.com/frah
+    name: naoty
+    url: https://github.com/naoty
   vimrcs:
-  - url: https://github.com/frah/dotfiles/blob/master/.vimrc
+  - url: https://github.com/naoty/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
