--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 123
-  date: 2014-11-08 23:00
+- id: 124
+  date: 2014-11-15 23:00
   author:
-    name: naoty
-    url: https://github.com/naoty
+    name: suy
+    url: https://github.com/suy
   vimrcs:
-  - url: https://github.com/naoty/dotfiles/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/suy/configs/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
