--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 124
-  date: 2014-11-15 23:00
+- id: 125
+  date: 2014-11-22 23:00
   author:
-    name: suy
-    url: https://github.com/suy
+    name: nyangry
+    url: https://github.com/nyangry
   vimrcs:
-  - url: https://github.com/suy/configs/blob/master/vimrc
+  - url: https://github.com/nyangry/dotfiles/blob/master/vimrc
     name: vimrc
     hash: 
   part: 
