--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 126
-  date: 2014-11-29 23:00
+- id: 127
+  date: 2014-12-06 23:00
   author:
-    name: y-uuki
-    url: https://github.com/y-uuki
+    name: motemen
+    url: https://github.com/motemen
   vimrcs:
-  - url: https://github.com/y-uuki/dotfiles/blob/master/.vimrc
+  - url: https://github.com/motemen/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
