--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 127
-  date: 2014-12-06 23:00
+- id: 128
+  date: 2014-12-13 23:00
   author:
-    name: motemen
-    url: https://github.com/motemen
+    name: Songmu
+    url: https://github.com/Songmu
   vimrcs:
-  - url: https://github.com/motemen/dotfiles/blob/master/.vimrc
+  - url: https://github.com/Songmu/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
