--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 129
-  date: 2014-12-20 23:00
+- id: 130
+  date: 2014-12-27 23:00
   author:
-    name: hakobe
-    url: https://github.com/hakobe
+    name: AtsushiM
+    url: https://github.com/AtsushiM
   vimrcs:
-  - url: https://github.com/hakobe/dotfiles/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/AtsushiM/vimrc/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
