--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 133
-  date: 2015-01-17 23:00
+- id: 134
+  date: 2015-01-24 23:00
   author:
-    name: joshtch
-    url: https://github.com/joshtch
+    name: tejr
+    url: https://github.com/tejr
   vimrcs:
-  - url: https://github.com/joshtch/dotfiles/blob/master/vimrc
+  - url: https://github.com/tejr/dotfiles/blob/master/vim/vimrc
     name: vimrc
     hash: 
   part: 
