--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 134
-  date: 2015-01-24 23:00
+- id: 135
+  date: 2015-01-31 23:00
   author:
-    name: tejr
-    url: https://github.com/tejr
+    name: rdlugosz
+    url: https://github.com/rdlugosz
   vimrcs:
-  - url: https://github.com/tejr/dotfiles/blob/master/vim/vimrc
+  - url: https://github.com/rdlugosz/dotfiles/blob/master/vimrc
     name: vimrc
     hash: 
   part: 
