--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 135
-  date: 2015-01-31 23:00
+- id: 136
+  date: 2015-02-07 23:00
   author:
-    name: rdlugosz
-    url: https://github.com/rdlugosz
+    name: miripiruni
+    url: https://github.com/miripiruni
   vimrcs:
-  - url: https://github.com/rdlugosz/dotfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/miripiruni/vimi/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
