--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 136
-  date: 2015-02-07 23:00
+- id: 137
+  date: 2015-02-14 23:00
   author:
-    name: miripiruni
-    url: https://github.com/miripiruni
+    name: PonderingGrower
+    url: https://github.com/PonderingGrower
   vimrcs:
-  - url: https://github.com/miripiruni/vimi/blob/master/.vimrc
+  - url: https://github.com/PonderingGrower/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
