--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 140
-  date: 2015-03-07 23:00
+- id: 141
+  date: 2015-03-14 23:00
   author:
-    name: mtth
-    url: https://github.com/mtth
+    name: hotchpotch
+    url: https://github.com/hotchpotch
   vimrcs:
-  - url: https://github.com/mtth/.dotfiles/blob/master/src/vimrc
-    name: vimrc
+  - url: https://github.com/hotchpotch/dotfiles-vim/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
