--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 143
-  date: 2015-03-28 23:00
+- id: 144
+  date: 2015-04-04 23:00
   author:
-    name: yassu
-    url: https://github.com/yassu
+    name: travisjeffery
+    url: https://github.com/travisjeffery
   vimrcs:
-  - url: https://github.com/yassu/dotfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/travisjeffery/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
