--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 145
-  date: 2015-04-11 23:00
+- id: 146
+  date: 2015-04-18 23:00
   author:
-    name: gregstallings
-    url: https://github.com/gregstallings
+    name: jdavis
+    url: https://github.com/jdavis
   vimrcs:
-  - url: https://github.com/gregstallings/vimfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/jdavis/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
