--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 148
-  date: 2015-05-02 23:00
+- id: 149
+  date: 2015-05-09 23:00
   author:
-    name: blueyed
-    url: https://github.com/blueyed
+    name: smutch
+    url: https://github.com/smutch
   vimrcs:
-  - url: https://github.com/blueyed/dotfiles/blob/master/vimrc
+  - url: https://github.com/smutch/vim-config/blob/master/vimrc
     name: vimrc
     hash: 
   part: 
