--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 149
-  date: 2015-05-09 23:00
+- id: 150
+  date: 2015-05-16 23:00
   author:
-    name: smutch
-    url: https://github.com/smutch
+    name: mhinz
+    url: https://github.com/mhinz
   vimrcs:
-  - url: https://github.com/smutch/vim-config/blob/master/vimrc
+  - url: https://github.com/mhinz/dotfiles/blob/master/vim/vimrc
     name: vimrc
     hash: 
   part: 
