--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 152
-  date: 2015-05-30 23:00
+- id: 153
+  date: 2015-06-06 23:00
   author:
-    name: mortonfox
-    url: https://github.com/mortonfox
+    name: morygonzalez
+    url: https://github.com/morygonzalez
   vimrcs:
-  - url: https://github.com/mortonfox/myvimrc/blob/master/_vimrc
-    name: _vimrc
+  - url: https://github.com/morygonzalez/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
