--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 153
-  date: 2015-06-06 23:00
+- id: 154
+  date: 2015-06-13 23:00
   author:
-    name: morygonzalez
-    url: https://github.com/morygonzalez
+    name: todashuta
+    url: https://github.com/todashuta
   vimrcs:
-  - url: https://github.com/morygonzalez/dotfiles/blob/master/.vimrc
+  - url: https://github.com/todashuta/.dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
