--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 155
-  date: 2015-06-20 23:00
+- id: 156
+  date: 2015-06-27 23:00
   author:
-    name: todashuta
-    url: https://github.com/todashuta
+    name: DeaR
+    url: https://github.com/DeaR
   vimrcs:
-  - url: https://github.com/todashuta/.dotfiles/blob/master/.vimrc
+  - url: https://github.com/DeaR/dotfiles/blob/master/.vimrc
     name: ".vimrc"
-    hash: aa1f494c4f223113e619f2551161af2176df1deb
-  part: 後編
+    hash: 
+  part: 前編
   other: 
