--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 156
-  date: 2015-06-27 23:00
+- id: 157
+  date: 2015-07-04 23:00
   author:
     name: DeaR
     url: https://github.com/DeaR
   vimrcs:
   - url: https://github.com/DeaR/dotfiles/blob/master/.vimrc
     name: ".vimrc"
-    hash: 
-  part: 前編
+    hash: "c5a66a5be81822b311263d3ecb2affb972fc0b28"
+  part: 後編
   other: 
