第162回分追加

--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 162
-  date: 2015-08-08 23:00
+- id: 163
+  date: 2015-08-15 23:00
   author:
-    name: angelic-sedition
-    url: https://github.com/angelic-sedition
+    name: soh335
+    url: https://github.com/soh335
   vimrcs:
-  - url: https://github.com/angelic-sedition/dotfiles/blob/master/vim/.vimrc
+  - url: https://github.com/soh335/dotfiles/blob/master/.vimrc
     name: ".vimrc"
-    hash: 5826fb53715b5cd69786e02ab02a4c8c4e34259e
-  part: 後編
+    hash: 
+  part: 
   other: 
