--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 168
-  date: 2015-09-19 23:00
+- id: 169
+  date: 2015-09-26 23:00
   author:
     name: YoshihiroIto
     url: https://github.com/YoshihiroIto
   vimrcs:
   - url: https://github.com/YoshihiroIto/dotfiles/blob/master/.vimrc
     name: ".vimrc"
-    hash: 
-  part: 
+    hash: 5a9435e42f3b982f0177b1010b1ab7109f9be747
+  part: "後編"
   other: 
