--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 173
-  date: 2015-10-24 23:00
+- id: 174
+  date: 2015-10-31 23:00
   author:
-    name: iishikawa
-    url: https://github.com/iishikawa
+    name: akinama
+    url: https://github.com/akinama
   vimrcs:
-  - url: https://github.com/iishikawa/dotfiles/blob/master/.vimrc
+  - url: https://github.com/akinama/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
