--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 178
-  date: 2015-11-28 23:00
+- id: 179
+  date: 2015-12-05 23:00
   author:
-    name: jesusangelm
-    url: https://github.com/jesusangelm
+    name: bbatha
+    url: https://github.com/bbatha
   vimrcs:
-  - url: https://github.com/jesusangelm/ConfVim/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/bbatha/dotfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
