--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 181
-  date: 2015-12-19 23:00
+- id: 182
+  date: 2015-12-26 23:00
   author:
-    name: vesanieminen
-    url: https://github.com/vesanieminen
+    name: RageZBla
+    url: https://github.com/RageZBla
   vimrcs:
-  - url: https://github.com/vesanieminen/vim-conf/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/RageZBla/dotfiles/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
