--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 187
-  date: 2016-01-30 23:00
+- id: 188
+  date: 2016-02-06 23:00
   author:
-    name: lambdalisue
-    url: https://github.com/lambdalisue
+    name: rafi
+    url: https://github.com/rafi
   vimrcs:
-  - url: https://github.com/lambdalisue/rook/blob/master/home/.vim/vimrc
+  - url: https://github.com/rafi/vim-config/blob/master/config/vimrc
     name: vimrc
     hash: 
   part: 
-  other: (2週目)
+  other: 
