--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 188
-  date: 2016-02-06 23:00
+- id: 189
+  date: 2016-02-13 23:00
   author:
-    name: rafi
-    url: https://github.com/rafi
+    name: zmughal
+    url: https://github.com/zmughal
   vimrcs:
-  - url: https://github.com/rafi/vim-config/blob/master/config/vimrc
-    name: vimrc
+  - url: https://github.com/zmughal/vimrc/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
