--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 189
-  date: 2016-02-13 23:00
+- id: 190
+  date: 2016-02-20 23:00
   author:
-    name: zmughal
-    url: https://github.com/zmughal
+    name: ntddk
+    url: https://github.com/ntddk
   vimrcs:
-  - url: https://github.com/zmughal/vimrc/blob/master/.vimrc
+  - url: https://github.com/ntddk/dotfiles/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
