--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 192
-  date: 2016-03-05 23:00
+- id: 193
+  date: 2016-03-12 23:00
   author:
-    name: KazuakiM
-    url: https://github.com/KazuakiM
+    name: ryuzee
+    url: https://github.com/ryuzee
   vimrcs:
-  - url: https://github.com/KazuakiM/dotfiles/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/ryuzee/vimrc/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
