--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 194
-  date: 2016-03-19 23:00
+- id: 195
+  date: 2016-03-26 23:00
   author:
-    name: jceb
-    url: https://github.com/jceb
+    name: AndrewRadev
+    url: https://github.com/AndrewRadev
   vimrcs:
-  - url: https://github.com/jceb/vimrc/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/AndrewRadev/Vimfiles/blob/master/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
