--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 195
-  date: 2016-03-26 23:00
+- id: 196
+  date: 2016-04-02 23:00
   author:
-    name: AndrewRadev
-    url: https://github.com/AndrewRadev
+    name: pragmaticTNT
+    url: https://github.com/pragmaticTNT
   vimrcs:
-  - url: https://github.com/AndrewRadev/Vimfiles/blob/master/.vimrc
+  - url: https://github.com/pragmaticTNT/VIM/blob/master/.vimrc
     name: ".vimrc"
     hash: 
   part: 
