--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 196
-  date: 2016-04-02 23:00
+- id: 197
+  date: 2016-04-09 23:00
   author:
-    name: pragmaticTNT
-    url: https://github.com/pragmaticTNT
+    name: kshenoy
+    url: https://github.com/kshenoy
   vimrcs:
-  - url: https://github.com/pragmaticTNT/VIM/blob/master/.vimrc
-    name: ".vimrc"
+  - url: https://github.com/kshenoy/dotvim/blob/master/vimrc
+    name: vimrc
     hash: 
   part: 
   other: 
