--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,33 @@
 ---
-- id: 204
-  date: 2016-05-28 23:00
+- id: 205
+  date: 2016-06-04 23:00
   author:
-    name: DanielFGray
-    url: https://github.com/DanielFGray
+    name: guns
+    url: https://github.com/guns
   vimrcs:
-  - url: https://github.com/DanielFGray/dotfiles/blob/master/vimrc
+  - url: https://github.com/guns/haus/blob/master/etc/vimrc
     name: vimrc
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/autocommands.vim
+    name: autocommands.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/commands.vim
+    name: commands.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/gvimrc.vim
+    name: gvimrc.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/mappings.vim
+    name: mappings.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/modifiers.vim
+    name: modifiers.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/syntax.vim
+    name: syntax.vim
+    hash: 
+  - url: https://github.com/guns/haus/blob/master/etc/vim/local/tty.vim
+    name: tty.vim
     hash: 
   part: 
   other: 
